fixed low free-RAM bug and added optimizations

--- a/arch/arm/configs/sultan-linaro_defconfig
+++ b/arch/arm/configs/sultan-linaro_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.55 Kernel Configuration
+# Linux/arm 3.0.55-sultan-kernel-r8 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -36,7 +36,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-jelly"
+CONFIG_LOCALVERSION="-linaro-jelly"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -71,7 +71,9 @@ CONFIG_PREEMPT_RCU=y
 CONFIG_RCU_FANOUT=32
 # CONFIG_RCU_FANOUT_EXACT is not set
 # CONFIG_TREE_RCU_TRACE is not set
-# CONFIG_RCU_BOOST is not set
+CONFIG_RCU_BOOST=y
+CONFIG_RCU_BOOST_PRIO=1
+CONFIG_RCU_BOOST_DELAY=0
 CONFIG_IKCONFIG=y
 # CONFIG_IKCONFIG_PROC is not set
 CONFIG_LOG_BUF_SHIFT=12
@@ -119,7 +121,7 @@ CONFIG_TIMERFD=y
 CONFIG_EVENTFD=y
 CONFIG_SHMEM=y
 CONFIG_ASHMEM=y
-# CONFIG_AIO is not set
+CONFIG_AIO=y
 CONFIG_EMBEDDED=y
 CONFIG_HAVE_PERF_EVENTS=y
 CONFIG_PERF_USE_VMALLOC=y
@@ -130,10 +132,9 @@ CONFIG_PERF_USE_VMALLOC=y
 CONFIG_PERF_EVENTS=y
 # CONFIG_PERF_COUNTERS is not set
 # CONFIG_VM_EVENT_COUNTERS is not set
-# CONFIG_SLUB_DEBUG is not set
-CONFIG_COMPAT_BRK=y
-# CONFIG_SLAB is not set
-CONFIG_SLUB=y
+# CONFIG_COMPAT_BRK is not set
+CONFIG_SLAB=y
+# CONFIG_SLUB is not set
 # CONFIG_SLOB is not set
 # CONFIG_PROFILING is not set
 CONFIG_TRACEPOINTS=y
@@ -149,6 +150,7 @@ CONFIG_HAVE_CLK=y
 #
 # CONFIG_GCOV_KERNEL is not set
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
+CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
@@ -341,8 +343,8 @@ CONFIG_MSM_DEBUG_UART_NONE=y
 CONFIG_HTC_BATT_CORE=y
 CONFIG_HTC_BATT8x60=y
 # CONFIG_HTC_BATT_8960 is not set
-CONFIG_MSM7X00A_USE_GP_TIMER=y
-# CONFIG_MSM7X00A_USE_DG_TIMER is not set
+# CONFIG_MSM7X00A_USE_GP_TIMER is not set
+CONFIG_MSM7X00A_USE_DG_TIMER=y
 # CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND is not set
 CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE=y
 # CONFIG_MSM7X00A_SLEEP_MODE_APPS_SLEEP is not set
@@ -412,7 +414,7 @@ CONFIG_RTAC=y
 # CONFIG_MSM_DMA_TEST is not set
 CONFIG_WIFI_CONTROL_FUNC=y
 CONFIG_WIFI_MEM_PREALLOC=y
-CONFIG_WIFI_NVS_PROC_CREATE=y
+# CONFIG_WIFI_NVS_PROC_CREATE is not set
 # CONFIG_ARCH_MSM_FLASHLIGHT is not set
 CONFIG_SURF_FFA_GPIO_KEYPAD=y
 CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
@@ -565,7 +567,7 @@ CONFIG_AEABI=y
 CONFIG_HAVE_ARCH_PFN_VALID=y
 CONFIG_HIGHMEM=y
 # CONFIG_HIGHPTE is not set
-CONFIG_HW_PERF_EVENTS=y
+# CONFIG_HW_PERF_EVENTS is not set
 CONFIG_VMALLOC_RESERVE=0x2E000000
 CONFIG_SELECT_MEMORY_MODEL=y
 CONFIG_FLATMEM_MANUAL=y
@@ -1170,7 +1172,7 @@ CONFIG_ANDROID_PMEM=y
 # CONFIG_SENSORS_AK8975 is not set
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
-CONFIG_UID_STAT=y
+# CONFIG_UID_STAT is not set
 # CONFIG_BMP085 is not set
 # CONFIG_WL127X_RFKILL is not set
 # CONFIG_APANIC is not set
@@ -2475,7 +2477,7 @@ CONFIG_STAGING=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
-# CONFIG_ANDROID_LOGGER is not set
+CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_RAM_CONSOLE_ENABLE_VERBOSE=y
 CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION=y
@@ -2488,10 +2490,10 @@ CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_POLYNOMIAL=0x11d
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_ANDROID_RADIO_LOG_SIZE=32
-CONFIG_ANDROID_DEVICE_LOG_SIZE=32
-CONFIG_ANDROID_SYSTEM_LOG_SIZE=32
-CONFIG_ANDROID_EVENTS_LOG_SIZE=32
+CONFIG_ANDROID_RADIO_LOG_SIZE=256
+CONFIG_ANDROID_DEVICE_LOG_SIZE=256
+CONFIG_ANDROID_SYSTEM_LOG_SIZE=256
+CONFIG_ANDROID_EVENTS_LOG_SIZE=256
 # CONFIG_POHMELFS is not set
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
@@ -2583,7 +2585,7 @@ CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 #
 CONFIG_PROC_FS=y
 CONFIG_PROC_SYSCTL=y
-# CONFIG_PROC_PAGE_MONITOR is not set
+CONFIG_PROC_PAGE_MONITOR=y
 CONFIG_SYSFS=y
 CONFIG_TMPFS=y
 # CONFIG_TMPFS_POSIX_ACL is not set
@@ -2655,7 +2657,6 @@ CONFIG_DEBUG_FS=y
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 # CONFIG_DEBUG_KERNEL is not set
 # CONFIG_HARDLOCKUP_DETECTOR is not set
-# CONFIG_SLUB_STATS is not set
 # CONFIG_DEBUG_FDLEAK is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
 CONFIG_STACKTRACE=y
