--- a/arch/arm/configs/sultan-linaro_defconfig
+++ b/arch/arm/configs/sultan-linaro_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.55-sultan-kernel-r8 Kernel Configuration
+# Linux/arm 3.0.55-sultan-kernel-r9 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -168,6 +168,8 @@ CONFIG_LBDAF=y
 #
 # IO Schedulers
 #
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
