zram is now baked in instead of being a module

--- a/arch/arm/configs/sultan-linaro_defconfig
+++ b/arch/arm/configs/sultan-linaro_defconfig
@@ -2506,7 +2506,7 @@ CONFIG_ANDROID_EVENTS_LOG_SIZE=256
 CONFIG_SNAPPY_COMPRESS=y
 CONFIG_SNAPPY_DECOMPRESS=y
 CONFIG_XVMALLOC=y
-CONFIG_ZRAM=m
+CONFIG_ZRAM=y
 CONFIG_ZRAM_NUM_DEVICES=1
 CONFIG_ZRAM_DEFAULT_DISKSIZE=100663296
 # CONFIG_ZRAM_DEBUG is not set
