--- a/arch/arm/configs/sultan-linaro-NO-bcm4329_defconfig
+++ b/arch/arm/configs/sultan-linaro-NO-bcm4329_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.58 Kernel Configuration
+# Linux/arm 3.0.58-sultan-kernel-r14b4 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -1294,7 +1294,7 @@ CONFIG_BCMDHD_FW_PATH="/vendor/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/proc/calibration"
 # CONFIG_DHD_USE_STATIC_BUF is not set
 # CONFIG_DHD_USE_SCHED_SCAN is not set
-CONFIG_DHD_ENABLE_P2P=y
+# CONFIG_DHD_ENABLE_P2P is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
